fix(center): top cash box aligned correctly

--- a/src/app/modules/main-page/center-box/cash-status/cash-status.component.scss
+++ b/src/app/modules/main-page/center-box/cash-status/cash-status.component.scss
@@ -13,9 +13,7 @@
 .cash-box {
   height: 100%;
   background-color: $dashboard-color;
-  //?
-  width: 33.333%;
-  //  ?
+  width: 100%;
   display: flex;
   border: solid 1px #DDDDDD;
   font-weight: bold;
