--- a/src/app/modules/main-page/header/header.component.scss
+++ b/src/app/modules/main-page/header/header.component.scss
@@ -42,3 +42,7 @@
   height: 20px;
   margin-right: 40px;
 }
+
+button {
+  font-weight: bold;
+}
