--- a/src/app/modules/main-page/side-bar-left/friends/friends.component.scss
+++ b/src/app/modules/main-page/side-bar-left/friends/friends.component.scss
@@ -12,6 +12,7 @@
 .friend-flex {
   display: flex;
   margin-bottom: 40px;
+  font-size: 14px;
 }
 
 .add-button {
