--- a/src/app/modules/main-page/side-bar-left/search-bar/search-bar.component.scss
+++ b/src/app/modules/main-page/side-bar-left/search-bar/search-bar.component.scss
@@ -3,9 +3,12 @@
   margin-top: 10px;
   height: 30px;
   width: 85%;
+  font-size: 14px;
 }
 
 .search-flex {
   display: flex;
   margin-bottom: 20px;
 }
+
+
